--- a/apps/kafka-tools/src/app/features/producer/producer.component.html
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.html
@@ -1,4 +1,4 @@
-<div class="pallette">
+<!-- <div class="pallette">
     <div class="display-color"></div>
     <div class="color" *ngFor="let i of paletteArray"></div>
 </div>
@@ -29,4 +29,6 @@
 <div class="pallette">
     <div class="display-color"></div>
     <div class="color" *ngFor="let i of paletteArray"></div>
-</div>
+</div> -->
+
+<button mat-raised-button>press me</button>
