--- a/apps/kafka-tools/src/_styles/themes/light-theme.scss
+++ b/apps/kafka-tools/src/_styles/themes/light-theme.scss
@@ -3,7 +3,7 @@
 $light-theme-colors: (
     'primary': #4200ff,
     'accent': black,
-    'warn': crimson,
+    'warn': rgb(255, 0, 51),
     'attention': #ff3c22,
     'success': #00ff9d,
     'background': white,
