--- a/apps/kafka-tools/src/app/features/producer/producer.component.html
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.html
@@ -31,4 +31,9 @@
     <div class="color" *ngFor="let i of paletteArray"></div>
 </div> -->
 
-<button mat-raised-button>press me</button>
+<button mat-raised-button color="warn">press me</button>
+<button mat-stroked-button color="warn">press me</button>
+<button mat-stroked-button color="primary">press me</button>
+<button mat-button color="warn">press me</button>
+<button mat-button color="primary">press me</button>
+<mat-slide-toggle color="warn">Press me</mat-slide-toggle>
