--- a/apps/kafka-tools/src/_styles/themes/dark-theme.scss
+++ b/apps/kafka-tools/src/_styles/themes/dark-theme.scss
@@ -7,7 +7,7 @@ $dark-theme-colors: (
     'attention': #ff3c22,
     'success': #00ff9d,
     'background': #0e0e0e,
-    'foreground': white,
+    'text': white,
     'shadow': black,
     'colors': (
         '1': #6f00ff,
