--- a/apps/kafka-tools/src/_styles/themes/light-theme.scss
+++ b/apps/kafka-tools/src/_styles/themes/light-theme.scss
@@ -7,7 +7,7 @@ $light-theme-colors: (
     'attention': #ff2b2b,
     'success': #00ff73,
     'background': white,
-    'foreground': black,
+    'text': black,
     'shadow': black,
     'colors': (
         '1': #6f00ff,
