--- a/apps/kafka-tools/src/app/features/producer/producer.component.scss
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.scss
@@ -2,12 +2,14 @@
 @import '~/src/_styles/theme.scss';
 @import '~/src/_styles/functions/get-lightens.function.scss';
 @import '~/src/_styles/functions/get-darkens.function.scss';
-
 :host {
     display: flex !important;
-    flex-flow: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    & > * {
+        margin: auto 2rem;
+        position: relative;
+    }
 }
 
 $colors: (
@@ -57,4 +59,36 @@ $colors: (
         //     }
         // }
     }
+}
+
+section {
+    display: table;
+}
+
+.example-label {
+    display: table-cell;
+    font-size: 14px;
+    margin-left: 8px;
+    min-width: 120px;
+}
+
+.example-button-row {
+    display: table-cell;
+    width: 490px;
+}
+
+.example-button-row .mat-button-base {
+    margin: 8px 8px 8px 0;
+}
+
+.example-flex-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.example-button-container {
+    display: flex;
+    justify-content: center;
+    width: 120px;
 }
