--- a/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.scss
+++ b/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.scss
@@ -18,6 +18,7 @@
         img {
             margin: auto;
             height: 1.5rem;
+            aspect-ratio: 1;
         }
 
         .app-name {
