chore(kafka-tools): updated themes to bload individual components less

--- a/apps/kafka-tools/src/_styles/mixins/theme.mixin.scss
+++ b/apps/kafka-tools/src/_styles/mixins/theme.mixin.scss
@@ -1,14 +1,14 @@
 @use 'sass:map';
 @use 'sass:list';
 
-@import '~/src/_styles/theme.scss';
+@import '~/src/_styles/themes/pallettes.scss';
 
 @mixin theme($property: null, $key: null) {
-    @each $theme-values in $themes {
-        $theme-class-name: #{list.nth($theme-values, 1)}-theme;
+    @each $pallette-values in $pallettes {
+        $theme-class-name: #{list.nth($pallette-values, 1)}-theme;
 
         ::ng-deep .#{$theme-class-name} & {
-            #{$property}: map.get(list.nth($theme-values, 3), $key);
+            #{$property}: map.get(list.nth($pallette-values, 2), $key);
         }
     }
 }
