--- a/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.scss
+++ b/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.scss
@@ -27,6 +27,7 @@
             font-variant: all-small-caps;
             margin: auto;
             margin-left: 0.25rem;
+            user-select: none;
         }
     }
 
