--- a/apps/kafka-tools/src/_styles/themes/dark/dark.pallette.scss
+++ b/apps/kafka-tools/src/_styles/themes/dark/dark.pallette.scss
@@ -1,6 +1,4 @@
-@import '~/src/_styles/functions/create-theme.function.scss';
-
-$dark-theme-colors: (
+$dark-pallette: (
     primary: #4200ff,
     accent: black,
     warn: red,
@@ -19,7 +17,3 @@ $dark-theme-colors: (
     ),
     is-dark: true,
 );
-
-$dark-theme: create-theme($dark-theme-colors);
-
-$dark-theme-export: (dark, $dark-theme, $dark-theme-colors);
