--- a/apps/kafka-tools/src/_styles/themes/light/light.pallette.scss
+++ b/apps/kafka-tools/src/_styles/themes/light/light.pallette.scss
@@ -1,6 +1,4 @@
-@import '~/src/_styles/functions/create-theme.function.scss';
-
-$light-theme-colors: (
+$light-pallette: (
     primary: #4200ff,
     accent: black,
     warn: rgb(255, 0, 51),
@@ -19,7 +17,3 @@ $light-theme-colors: (
     ),
     is-dark: false,
 );
-
-$light-theme: create-theme($light-theme-colors);
-
-$light-theme-export: (light, $light-theme, $light-theme-colors);
