chore(kafka-tools): converted rgba value to hex in the light theme

--- a/apps/kafka-tools/src/_styles/themes/light/light.pallette.scss
+++ b/apps/kafka-tools/src/_styles/themes/light/light.pallette.scss
@@ -1,7 +1,7 @@
 $light-pallette: (
     primary: #4200ff,
     accent: black,
-    warn: rgb(255, 0, 51),
+    warn: #ff0033,
     attention: #ff2b2b,
     success: #00ff73,
     background: white,
