--- a/apps/kafka-tools/src/app/app.component.html
+++ b/apps/kafka-tools/src/app/app.component.html
@@ -1,1 +1,9 @@
-<img src="/assets/app-icon-dark.svg" />
+<div
+    class="mat-app-background mat-typography content"
+    [ngClass]="themes[currentThemeIndex] + '-theme'"
+>
+    <kafka-tools-window-controls
+        (click)="shuffleTheme()"
+    ></kafka-tools-window-controls>
+    <router-outlet></router-outlet>
+</div>
