--- a/apps/kafka-tools/src/app/features/producer/producer.component.scss
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.scss
@@ -1,5 +1,14 @@
 :host {
-    display: flex !important;
-    align-items: flex-end;
-    justify-content: flex-end;
+    display: flex;
+    flex-flow: column;
+}
+
+.terminal {
+    height: 90%;
+    max-height: 90%;
+    overflow: hidden scroll;
+}
+.footer {
+    display: flex;
+    height: 10%;
 }
