--- a/apps/kafka-tools/src/app/app.component.scss
+++ b/apps/kafka-tools/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import '~/src/_styles/theme.scss';
+
 :host .content {
     height: 100%;
     width: 100%;
@@ -23,11 +25,19 @@ kafka-tools-window-controls {
 ::ng-deep * {
     /* Chrome, Edge, and Safari */
     &::-webkit-scrollbar {
-        width: 5px;
+        width: 8px;
     }
 
     &::-webkit-scrollbar-thumb {
         background: var(--theme-text);
         border-radius: 10px;
+    }
+
+    &::selection {
+        background: var(--theme-primary);
+    }
+
+    input {
+        caret-color: var(--theme-primary);
     }
 }
