chore(kafka-tools): touched up the styling for the topic input

--- a/apps/kafka-tools/src/app/app.component.scss
+++ b/apps/kafka-tools/src/app/app.component.scss
@@ -37,7 +37,12 @@ kafka-tools-window-controls {
         background: var(--theme-primary);
     }
 
+    --border-radius: 3px;
     input {
         caret-color: var(--theme-primary);
+    }
+
+    button {
+        border-radius: var(--border-radius) !important;
     }
 }
